--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ cache:
   - bundler
 
 
-before_install: gem install bundler -v 1.15.4
+before_install:
+  - gem install bundler -v 1.15.4
+  - gem install bundler-audit -v 0.6.0
 
 script:
   - bundle audit --update
-  - bundle exec rubocop -D
-  - RAILS_ENV=test bundle exec rake spec
+  - bundle exec rubocop -D Gemfile safety_goggles.gemspec lib/
+  - bundle exec rake spec
 
 deploy:
   provider: script
