--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.4
-  - 2.4.1
+#  - 2.4.1
 
 cache:
 #  - apt
@@ -12,6 +12,10 @@ cache:
 before_install:
   - gem install bundler -v 1.15.4
   - gem install bundler-audit -v 0.6.0
+
+# We don't want deployment mode
+# It gets confusing when the gem we're building is part of the Gemfile.lock
+install: bundle install --jobs=3 --retry=3
 
 script:
   - bundle audit --update
