--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ script:
   - bundle exec rake spec
 
 before_deploy:
+  - mkdir ~/.gem
+  - echo ":rubygems_api_key: ${RUBYGEMS_API_KEY:?}" > ~/.gem/credentials
+  - chmod 600 ~/.gem/credentials
   - gem build *.gemspec
 
 deploy:
