--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
 
 before_deploy:
   - mkdir -p ~/.gem
-  - echo ":rubygems_api_key: ${RUBYGEMS_API_KEY:?}" > ~/.gem/credentials
+  - 'echo ":rubygems_api_key: ${RUBYGEMS_API_KEY:?}" > ~/.gem/credentials'
   - chmod 600 ~/.gem/credentials
   - gem build *.gemspec
 
