--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_deploy:
   - 'echo ":rubygems_api_key: ${RUBYGEMS_API_KEY:?}" > ~/.gem/credentials'
   - chmod 600 ~/.gem/credentials
   - gem build *.gemspec
+  - git checkout -- Gemfile.lock
 
 deploy:
   provider: script
